--- a/front/juego.html
+++ b/front/juego.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jugadores</title>
   <link rel="stylesheet" href="juego.css">
 </head>
@@ -10,8 +10,60 @@
   <div class="reglas-container">
     <h1><span class="futbol">FUTBOL</span><span class="once">11</span></h1>
 
-    <div class="grid-jugadores" id="contenedor-jugadores"></div>
+    <div class="grid-jugadores">
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 1">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 2">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 3">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 4">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 5">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 6">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 7">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 8">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 9">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 10">
+      </button>
+      <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 11">
+      </button>
+       <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 12">
+      </button>
+       <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 13">
+      </button>
+       <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 14">
+      </button>
+       <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 15">
+      </button>
+       <button class="jugador">
+        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 16">
+      </button>
+    </div>
+    <button type="submit" class="boton-enviar">Enviar</button>
+    </form>
   </div>
-  <script src="js/juego.js"></script>
+  </div>
+  </div>
 </body>
 </html>
