--- a/front/perdiste.html
+++ b/front/perdiste.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>¡Perdiste!</title>
-  <link rel="stylesheet" href="juego.css">
+  <link rel="stylesheet" href="ganaste.css">
 </head>
 <body>
   <div class="contenedor-ganaste">
     <div class="mensaje-ganaste">
       <h1>¡PERDISTE!</h1>
-      <a href="index.html" class="boton-volver">Volver al inicio</a>
+      <a href="inicio.html" class="boton-volver">Volver<br>al inicio</a>
     </div>
   </div>
 </body>
