--- a/front/index.html
+++ b/front/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio de Sesión - Futbol11</title>
-  <link rel="stylesheet" href="juego.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="login-container">
     <h1><span class="futbol">FUTBOL</span><span class="once">11</span></h1>
     <p>Inicia Sesión para poder jugar</p>
-    <form action="juego.html" method="GET">
-      <input type="text" name="username" placeholder="Usuario" required />
-      <input type="password" name="password" placeholder="Contraseña" required />
+    <form action="reglas.html" method="GET">
+      <input type="text" name="username" placeholder="Usuario" required>
+      <input type="password" name="password" placeholder="Contraseña" required>
       <button type="submit">Iniciar</button>
     </form>
   </div>
 </body>
-</html>
