Fotos del nivel normal (hasta ahora)

--- a/front/juego_normal.html
+++ b/front/juego_normal.html
@@ -12,7 +12,7 @@
 
     <div class="grid-jugadores">
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 1">
+        <img src="" alt="Jugador 1">
       </button>
       <button class="jugador">
         <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 2">
