agregue las imagenes al html

--- a/front/juego_facil.html
+++ b/front/juego_facil.html
@@ -15,49 +15,49 @@
         <img src="/images/nivel_facil/asensio.webp" alt="Jugador 1">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 2">
+        <img src="/images/nivel_facil/ballack.webp" alt="Jugador 2">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 3">
+        <img src="/images/nivel_facil/cantona.png" alt="Jugador 3">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 4">
+        <img src="/images/nivel_facil/christensen.webp" alt="Jugador 4">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 5">
+        <img src="/images/nivel_facil/gosens.png" alt="Jugador 5">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 6">
+        <img src="/images/nivel_facil/gusto.webp" alt="Jugador 6">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 7">
+        <img src="/images/nivel_facil/kante.png" alt="Jugador 7">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 8">
+        <img src="/images/nivel_facil/kimmich.webp" alt="Jugador 8">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 9">
+        <img src="/images/nivel_facil/neves.webp" alt="Jugador 9">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 10">
+        <img src="/images/nivel_facil/pastore.png" alt="Jugador 10">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 11">
+        <img src="/images/nivel_facil/reina.png" alt="Jugador 11">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 12">
+        <img src="/images/nivel_facil/rivaldo.png" alt="Jugador 12">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 13">
+        <img src="/images/nivel_facil/sagna.png" alt="Jugador 13">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 14">
+        <img src="/images/nivel_facil/silva.png" alt="Jugador 14">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 15">
+        <img src="/images/nivel_facil/traore.png" alt="Jugador 15">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 16">
+        <img src="/images/nivel_facil/werner.webp" alt="Jugador 16">
       </button>
     </div>
     <button type="submit" class="boton-enviar">Enviar</button>
