--- a/front/juego_facil.html
+++ b/front/juego_facil.html
@@ -61,6 +61,7 @@
       </button>
     </div>
     <button type="submit" class="boton-enviar">Enviar</button>
+    <button type="clear" class="boton-borrar">Borrar</button>
     </form>
   </div>
   </div>
