--- a/front/ganaste.html
+++ b/front/ganaste.html
@@ -10,7 +10,7 @@
   <div class="contenedor-ganaste">
     <div class="mensaje-ganaste">
       <h1>¡GANASTE!</h1>
-      <a href="inicio.html" class="boton-volver">Volver<br>al inicio</a>
+      <a href="inicio.html" class="boton-volver">Volver al inicio</a>
     </div>
   </div>
 </body>
