--- a/front/juego_normal.html
+++ b/front/juego_normal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jugadores</title>
+  <title>Futbol11</title>
   <link rel="stylesheet" href="juego.css">
 </head>
 <body>
@@ -12,58 +12,59 @@
 
     <div class="grid-jugadores">
       <button class="jugador">
-        <img src="" alt="Jugador 1">
+        <img src="/images/nivel_normal/vela.png" alt="Jugador 1">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 2">
+        <img src="/images/nivel_normal/anelka.png" alt="Jugador 2">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 3">
+        <img src="/images/nivel_normal/aubameyang.webp" alt="Jugador 3">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 4">
+        <img src="/images/nivel_normal/Bacca.png" alt="Jugador 4">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 5">
+        <img src="/images/nivel_normal/CARLITOOO.webp" alt="Jugador 5">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 6">
+        <img src="/images/nivel_normal/cech.png" alt="Jugador 6">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 7">
+        <img src="/images/nivel_normal/giggs.webp" alt="Jugador 7">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 8">
+        <img src="/images/nivel_normal/gundogan.webp" alt="Jugador 8">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 9">
+        <img src="/images/nivel_normal/jorginho.webp" alt="Jugador 9">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 10">
+        <img src="/images/nivel_normal/khedira.png" alt="Jugador 10">
       </button>
       <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 11">
+        <img src="/images/nivel_normal/mustafi.png" alt="Jugador 11">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 12">
+        <img src="/images/nivel_normal/ozil.png" alt="Jugador 12">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 13">
+        <img src="/images/nivel_normal/puyol.webp" alt="Jugador 13">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 14">
+        <img src="/images/nivel_normal/scholes.png" alt="Jugador 14">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 15">
+        <img src="/images/nivel_normal/totti.png" alt="Jugador 15">
       </button>
        <button class="jugador">
-        <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Jugador 16">
+        <img src="/images/nivel_normal/valderrama.png" alt="Jugador 16">
       </button>
     </div>
     <button type="submit" class="boton-enviar">Enviar</button>
-    </form>
-  </div>
-  </div>
-  </div>
+    <button type="clear" class="boton-borrar">Borrar</button>
+  </form>
+</div>
+</div>
+</div>
 </body>
 </html>
