--- a/front/reglas.html
+++ b/front/reglas.html
@@ -21,8 +21,8 @@
     </ul>
 
     <div class="botones">
-      <a href="juego.html?modo=facil"><button>Fácil</button></a>
-      <a href="juego.html?modo=normal"><button>Normal</button></a>
+      <a href="juego_facil.html"><button>Fácil</button></a>
+      <a href="juego_normal.html"><button>Normal</button></a>
     </div>
   </div>
 </body>
