--- a/front/entrar.html
+++ b/front/entrar.html
@@ -11,7 +11,7 @@
     <h1><span class="futbol">FUTBOL</span><span class="once">11</span></h1>
 
     <button class="imagen-boton" id="imagenBoton">
-      <img src="07eb0716-10aa-48fe-9e5d-971b24acce52.png" alt="Imagen" />
+      <img src="" alt="Imagen" />
     </button>
   </div>
 
