--- a/front/index.html
+++ b/front/index.html
@@ -10,7 +10,7 @@
   <div class="login-container">
     <h1><span class="futbol">FUTBOL</span><span class="once">11</span></h1>
     <p>Inicia Sesión para poder jugar</p>
-    <form action="reglas.html" method="GET">
+    <form action="entrar.html" method="GET">
       <input type="text" name="username" placeholder="Usuario" required>
       <input type="password" name="password" placeholder="Contraseña" required>
       <button type="submit">Iniciar</button>
